<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"

    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_margin="16dp"

    >

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/my_logo_foreground"
        android:layout_marginTop="80dp"

        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"

        android:textSize="22sp"
        android:textStyle="bold"
        android:letterSpacing="0.07"

        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:gravity="center"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="32sp"
            android:layout_margin="12dp"
            />

        <EditText
            android:id="@+id/et_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/rounded_corner"
            />

        <EditText
            android:id="@+id/et_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="12dp"
            android:layout_margin="12dp"
            android:background="@drawable/rounded_corner"
            />


        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/login"
            android:layout_margin="12dp"
            android:padding="12dp"


            />

        <ProgressBar
            android:id="@+id/pb_progressbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="12dp"
            android:visibility="gone"
            android:padding="12dp"

            />

        <TextView
            android:id="@+id/tv_go_to_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:gravity="center"
            android:textSize="20sp"
            android:layout_margin="12dp"
            />




    </LinearLayout>

</LinearLayout>