<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VideoUploadActivity">


    <RelativeLayout
        android:id="@+id/rl_post_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:visibility="gone"
        tools:visibility="visible"
        >

        <EditText
            android:id="@+id/et_post_caption_input"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="10dp"
            android:layout_toStartOf="@id/iv_post_thumbnail"
            android:padding="10dp"
            android:gravity="top"
            android:hint="@string/write_your_caption_here"
            />

        <ImageView
            android:id="@+id/iv_post_thumbnail"
            android:layout_width="90dp"
            android:layout_height="160dp"
            android:layout_alignParentEnd="true"
            tools:background="@color/black"
            android:layout_margin="10dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:gravity="center"
            android:orientation="horizontal"
            >

            <Button
                android:id="@+id/btn_cancel_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_weight="1"
                />

            <ProgressBar
                android:id="@+id/pb_progressbar1"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                android:layout_weight="1"
                android:visibility="gone"

                />

            <Button
                android:id="@+id/btn_submit_post"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/post"

                android:layout_weight="1"
                />




        </LinearLayout>



    </RelativeLayout>




    <RelativeLayout
        android:id="@+id/rl_upload_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <ImageView
            android:id="@+id/iv_add_icon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_add"
            android:layout_centerInParent="true"
            app:tint="@color/black" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/click_to_upload_a_video"
            android:gravity="center"
            android:layout_below="@+id/iv_add_icon"

            />




    </RelativeLayout>


</RelativeLayout>